--- a/llvm_passes/feature_extraction/CMakeLists.txt
+++ b/llvm_passes/feature_extraction/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_llvm_pass_plugin(set_unroll_pass set_unroll_pass.cpp)
+message(STATUS "Source directory is: ${CMAKE_SOURCE_DIR}")
+add_compile_options(-fexceptions)
+add_llvm_pass_plugin(FeatureExtractionPass feature_extraction.cpp)
+target_include_directories(FeatureExtractionPass PRIVATE ${CMAKE_SOURCE_DIR}/../include)
