--- a/llvm_passes/feature_extraction/CMakeLists.txt
+++ b/llvm_passes/feature_extraction/CMakeLists.txt
@@ -2,3 +2,4 @@ message(STATUS "Source directory is: ${CMAKE_SOURCE_DIR}")
 add_compile_options(-fexceptions)
 add_llvm_pass_plugin(FeatureExtractionPass feature_extraction.cpp)
 target_include_directories(FeatureExtractionPass PRIVATE ${CMAKE_SOURCE_DIR}/../include)
+include_directories(${CMAKE_SOURCE_DIR}/include)
