--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
+.DS_Store
+*/.DS_Store
 llvm_passes/build
 .vscode
 output_exe
-timed_src.cpp
-times.json
-preprop.cpp
-results.log
 loop_features.json
-error_log.txt
-dataset/*.ll
+dataset/*.c
+data_unrolled/*.ll
 env
-.DS_Store
-*/.DS_Store
 dataset/*.cc
 data_unrolled/*.ll
